--- a/index.html
+++ b/index.html
@@ -6,52 +6,64 @@
     <title>Game Website</title>
     <style>
         body {
-            background: #0f0f0f;
+            background: #0d0d0d;
             color: #fff;
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
+            overflow-x: hidden;
+        }
+        header {
+            background: rgba(20, 20, 20, 0.9);
+            padding: 20px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
         .container {
-            padding: 50px;
+            padding: 100px 50px;
         }
         h1 {
-            font-size: 3rem;
+            font-size: 3.5rem;
             animation: fadeIn 2s ease-in-out;
         }
         .button {
             display: inline-block;
-            padding: 15px 30px;
+            padding: 15px 40px;
             margin: 20px;
             font-size: 1.5rem;
             color: #fff;
             background: linear-gradient(45deg, #ff00ff, #00ffff);
             border: none;
             cursor: pointer;
-            border-radius: 10px;
+            border-radius: 50px;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
         .button:hover {
             transform: scale(1.1);
-            box-shadow: 0 0 20px rgba(255, 0, 255, 0.8);
+            box-shadow: 0 0 25px rgba(255, 0, 255, 0.8);
         }
         .placeholder {
-            width: 300px;
-            height: 200px;
+            width: 80%;
+            max-width: 600px;
+            height: 300px;
             background: #222;
             color: #ff0000;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 1.2rem;
-            border: 2px dashed #ff0000;
-            margin: 20px auto;
+            font-size: 1.5rem;
+            border: 3px dashed #ff0000;
+            margin: 40px auto;
             animation: pulse 1.5s infinite alternate;
+            border-radius: 15px;
         }
         .text {
-            font-size: 2rem;
-            margin: 20px;
+            font-size: 2.2rem;
+            margin: 30px;
             animation: fadeInUp 1.5s ease-in-out;
         }
         @keyframes fadeIn {
@@ -63,14 +75,16 @@
             to { transform: translateY(0); opacity: 1; }
         }
         @keyframes pulse {
-            from { transform: scale(1); opacity: 0.6; }
-            to { transform: scale(1.1); opacity: 1; }
+            from { transform: scale(1); opacity: 0.7; }
+            to { transform: scale(1.05); opacity: 1; }
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>Game Website</h1>
+    </header>
+    <div class="container">
         <div class="placeholder">UNFINISHED PRODUCT</div>
         <div class="text">Text</div>
         <button class="button">Button</button>
